Changed acceptence tests to handle both gradle and maven builds. Use java.ext.dirs to add jdbc drivers to classpatth as a temporary measure to run tests. Explicially set the cli type to make resolution more straight forward. Remove Parameterised tests as when there is a failure its hard to find where the issue is.  Deifning suites that deal with different configs provides better sharding options on CI.